# term-dep-py

./: .tool-versions  README.md  pyproject.toml
src/: calculator.py  cli.py  input_validator.py  writer.py
src/models/: term_deposit_details.py
test/: test_cli.py
tests/: test_calculator.py  test_cli.py  test_input_validator.py  test_validator.py
